--- a/app/assets/stylesheets/toys.scss
+++ b/app/assets/stylesheets/toys.scss
@@ -7,3 +7,9 @@
   border: 0.5px solid #d1cfe2; 
   border-radius: 5px;
 }
+
+#toy-index{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
