--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -100,6 +100,15 @@ footer {
   }
 }
 
+a {
+  &:hover {
+    font-weight: 540;
+    text-decoration: none;
+    color: rgb(53, 51, 51);
+    background: transparent;
+  }
+}
+
 /* mixins, variables, etc. */
 $gray-medium-light: #eaeaea;
 @mixin box_sizing {
