--- a/app/assets/stylesheets/toys.scss
+++ b/app/assets/stylesheets/toys.scss
@@ -6,6 +6,15 @@
   padding: 0.5rem;
   border: 0.5px solid #d1cfe2; 
   border-radius: 5px;
+
+  >.card-body.interaction-link{
+      &:hover {
+        font-weight: 540;
+        text-decoration: none;
+        color: rgb(53, 51, 51);
+        background: transparent;
+      }
+  }
 }
 
 #toy-index{
@@ -13,3 +22,4 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
+
