--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,23 @@
 <div class="container user-dashboard">
-  <div id="user-info">
+  <div id="user">
+      <div id="user-info">
+        <div id="user-image">
+          <%= gravatar_for(@user) %> 
+        </div>
 
-      <div id="user-image">
-        <%= gravatar_for(@user) %> 
+        <div id="info">
+          <span id="username"> <%= @user.name %> </span><br> 
+          <span id="email"> <%= @user.email %> </span> 
+        </div>
       </div>
 
-      <div id="info">
-        <span id="username"> <%= @user.name %> </span><br> 
-        <span id="email"> <%= @user.email %> </span> 
+      <div id="account-interaction">
+        <div class="button">
+          <%= link_to 'Edit', '#', class: 'btn-sm btn-primary' %>
+        </div>
+        <div class="button">
+          <%= link_to 'Delete Account', @user, method: :delete, data: { confirm: 'Delete account?' }, class: 'btn-sm btn-primary' %> 
+        </div>
       </div>
   </div>
 
@@ -18,8 +28,8 @@
     %>
 
     <span id="toy-count"> <%= "#{fname} has #{pluralize(toy_count, 'toy')}" %> </span>  <br>
-    
-    <%= link_to 'Add Toy', '#', id: "new-toy", class: "btn btn-primary" %>
+    <br> 
+    <%= link_to 'Add Toy', '#', id: "new-toy", class: "btn-sm btn-primary" %>
   </div>
 
   <div id="toys">
