--- a/app/views/toys/_form.html.erb
+++ b/app/views/toys/_form.html.erb
@@ -6,7 +6,7 @@
     <%= f.text_field :name, class: 'form-control' %>
     <%= f.label :description %>
     <%= f.text_area :description, class: 'form-control' %>
-    <br>
-    <%= f.submit "Add toy", class: "btn btn-primary" %>
+
+    <%= f.submit "Add toy", class: "btn btn-primary", style: 'margin-top: 5px' %>
   <% end %>
 </div>
