--- a/app/views/toys/_form.html.erb
+++ b/app/views/toys/_form.html.erb
@@ -7,6 +7,6 @@
     <%= f.label :description %>
     <%= f.text_area :description, class: 'form-control' %>
 
-    <%= f.submit "Add toy", class: "btn btn-primary", style: 'margin-top: 5px' %>
+    <%= f.submit class: "btn btn-primary", style: 'margin-top: 5px' %>
   <% end %>
 </div>
