add test for users controller
fix users controller to pass test requirements

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,10 +14,10 @@
       <% if current_user == @user %>
         <div id="account-interaction">
           <div class="button">
-            <%= link_to 'Edit', edit_user_path(@user), class: 'btn-sm btn-primary' %>
+            <%= link_to 'Update profile', edit_user_path(@user), class: 'btn-sm btn-primary' %>
           </div>
           <div class="button">
-            <%= link_to 'Delete Account', @user, method: :delete, data: { confirm: 'Delete account?' }, class: 'btn-sm btn-primary' %> 
+            <%= link_to 'Delete profile', @user, method: :delete, data: { confirm: 'Delete account?' }, class: 'btn-sm btn-primary' %> 
           </div>
         </div>
       <% end %>
