--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <%= render 'layouts/header' %>
 
     <% flash.each do |message_type, message| %>
-      <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <div class="alert alert-<%= message_type %>" style="margin: 2rem 10rem"><%= message %></div>
     <% end %>
 
     <%= yield %>
