--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand fw-bold" href="#">Toy App</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to 'Dashboard', '#', class: "nav-link active", 
+          <%= link_to 'Dashboard', dashboard_path, class: "nav-link active", 
                       aria: { current: 'page' } 
           %>
         </li>
@@ -16,9 +16,9 @@
                       id: "navbarDropdown", role: "button", 'data-bs-toggle': "dropdown", 'aria-expanded': "false"
           %>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <%= link_to 'Account', '#', class: 'dropdown-item' %>
+            <%= link_to 'Account', current_user, class: 'dropdown-item' %>
             <li><hr class="dropdown-divider"></li>
-            <%= link_to 'Log Out', '#', class: 'dropdown-item' %>
+            <%= link_to 'Log Out', logout_path, method: :delete, class: 'dropdown-item' %>
           </ul>
         </li>
       </ul>
