--- a/app/views/toys/_toy.html.erb
+++ b/app/views/toys/_toy.html.erb
@@ -1,21 +1,43 @@
-<div class="toy-card card" style="width: 30rem;">
-  <div class="card-body">
+<div class="card text-center" style="width: 21rem;">
 
-    <span class="card-title"><%= toy.name %> </span>
-
-    <div class="toy-owner">
-      <%= gravatar_for(toy.owner, size: 16) %>
-      <h6 class="card-subtitle mb-2 text-muted"> <%= link_to toy.owner.name, toy.owner, class: 'user-link'  %> </h6>
+  <div class="card-header">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <% placeholder = 'data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22200%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20200%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_17f64a604f7%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_17f64a604f7%22%3E%3Crect%20width%3D%22200%22%20height%3D%22200%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2274.267822265625%22%20y%3D%22104.66666688919068%22%3E200x200%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E'%>
+        <div class="carousel-item active">
+          <img src=<%= placeholder %> class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src=<%= placeholder %> class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src=<%= placeholder %> class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <p class="card-text">
-      <%= toy.description %> 
-    </p>
+  </div>
 
-    <% if current_user == toy.owner %>
-      <%= link_to 'Edit', edit_toy_path(toy), class: 'interaction-link'%>
-      <%= link_to 'Delete', toy, method: :delete, class: 'interaction-link', data: { confirm: 'Are you sure' } %>
-    <% end %>
+  <div class="card-body">
+    <h5 class="card-title"><%= toy.name %></h5>
+    <p class="card-text"><%= toy.description %></p>
+  </div>
 
-    <div class="dot"></div>
+  <div class="card-footer text-muted">
+    <%= link_to 'View Toy', toy, class: "btn btn-primary btn-sm" %> 
+    <%= link_to 'Edit Toy', edit_toy_path(toy), class: "btn btn-primary btn-sm" %> 
+    <%= link_to 'Delete Toy', toy, method: :delete, class: "btn btn-primary btn-sm" %> 
   </div>
 </div>
