--- a/app/views/toys/show.html.erb
+++ b/app/views/toys/show.html.erb
@@ -8,6 +8,35 @@
     </div>
   </div>
 
+  <hr>
+
+  <p>
+    <a class="btn " data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+      <%= image_tag 'upload.svg' %>
+      <span class="fs-6 fw-lighter">Upload a new toy image</span>
+    </a>
+  </p>
+  <div class="collapse" id="collapseExample">
+    <div class="card card-body">
+      <div class="toy-form">
+        <%= form_for(@toy) do |f| %>
+          <%= render 'error_messages', model: @toy %>
+
+          <div class="field my-3">
+            <%= f.file_field :images, class: "form-control form-control-sm", multiple: true %>
+          </div>
+
+          <div id="preview" class="d-flex justify-content-center flex-wrap d-none" style>
+          </div>
+
+          <%= f.submit class: "btn btn-sm", style: 'margin-top: 5px', value: 'Upload images' %>
+        <% end %>
+      </div>
+    </div>
+  </div> 
+
+  <hr>
+
   <div class="card text-center">
     <div class="card-header">
       <ul class="nav nav-pills card-header-pills">
@@ -22,16 +51,17 @@
             <%= image_tag 'grid.svg' %> 
           <% end %>
         </li>
-
       </ul>
     </div>
 
     <div class="card-body d-flex align-items-center flex-column">
       <% @toy.images.each do |image| %>
-        <div class="card toy-image my-2">
+        <div class="card toy-image my-2" id="img-card-<%=image.id%>">
           <div class="card-body d-flex flex-row-reverse">
-            <%= image_tag 'trash.svg', class: 'img-interaction-button' %>
-            <%= image_tag 'share-2.svg', class: 'img-interaction-button' %>
+            <%= link_to delete_image_path(image.id), method: :delete, remote: true do %>
+              <%= image_tag 'trash.svg', class: 'img-interaction-button delete', id: image.id %>
+            <% end %>
+              <%= image_tag 'share-2.svg', class: 'img-interaction-button share', id: image.id %>
           </div>
           <%= image_tag url_for(image), class: "card-img-bottom" %>
         </div>
