make preview not hidden when no images uploaded

--- a/app/views/toys/show.html.erb
+++ b/app/views/toys/show.html.erb
@@ -12,8 +12,8 @@
 
   <p>
     <a class="btn " data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-      <%= image_tag 'upload.svg' %>
-      <span class="fs-6 fw-lighter">Upload a new toy image</span>
+      <%= image_tag 'image.svg' %>
+      <span class="fs-6 fw-lighter">Add new image</span>
     </a>
   </p>
   <div class="collapse" id="collapseExample">
@@ -26,10 +26,14 @@
             <%= f.file_field :images, class: "form-control form-control-sm", multiple: true %>
           </div>
 
-          <div id="preview" class="d-flex justify-content-center flex-wrap d-none" style>
+          <div class="container d-none" id="image-preview-container">
+            <div id="preview" class="d-flex justify-content-center flex-wrap" style>
+            </div>
           </div>
 
-          <%= f.submit class: "btn btn-sm", style: 'margin-top: 5px', value: 'Upload images' %>
+          <div type="submit" name="commit" data-disable-with="Update Toy" class="d-flex justify-content-center">
+            <%= image_tag 'upload.svg' %>
+          </div>
         <% end %>
       </div>
     </div>
