--- a/app/views/toys/_form.html.erb
+++ b/app/views/toys/_form.html.erb
@@ -17,8 +17,11 @@
       <%= f.file_field :images, class: "form-control form-control-sm", multiple: true %>
     </div>
 
-    <div id="preview" class="d-flex justify-content-center flex-wrap">
+    <div class="container d-none" id="image-preview-container">
+      <div id="preview" class="d-flex justify-content-center flex-wrap">
+      </div>   
     </div>
+
 
     <%= f.submit class: "btn btn-primary", style: 'margin-top: 5px' %>
   <% end %>
