--- a/app/views/toys/show.html.erb
+++ b/app/views/toys/show.html.erb
@@ -1,4 +1,7 @@
 <div class="container toy-show">
+  <div>
+    <%= image_tag url_for(some_toy) %>
+  </div>
 
   <div class="container toy-info card center my-3 text-center">
     <span class="fw-bolder mt-2 fs-5"><%= @toy.name %></span>
@@ -19,7 +22,7 @@
   <div class="collapse" id="collapseExample">
     <div class="card card-body">
       <div class="toy-form">
-        <%= form_for(@toy) do |f| %>
+        <%= form_for(@toy, remote: true) do |f| %>
           <%= render 'error_messages', model: @toy %>
 
           <div class="field my-3">
@@ -32,8 +35,12 @@
             </div>
           </div>
 
-          <div type="submit" name="commit" data-disable-with="Update Toy" class="d-flex justify-content-center">
-            <%= image_tag 'upload.svg' %>
+          <div class="d-grid gap-2 col-1 mx-auto">
+            <button type="submit" name="commit"
+                class="btn btn-outline-secondary btn-sm" 
+                id="upload-button" disabled>
+                <%= image_tag 'upload.svg' %>
+            </button>
           </div>
         <% end %>
       </div>
@@ -43,6 +50,7 @@
   <hr>
 
   <div class="card text-center">
+
     <div class="card-header">
       <ul class="nav nav-pills card-header-pills">
         <li class="nav-item">
@@ -59,19 +67,8 @@
       </ul>
     </div>
 
-    <div class="card-body d-flex align-items-center flex-column">
-      <% @toy.images.each do |image| %>
-        <div class="card toy-image my-2" id="img-card-<%=image.id%>">
-          <div class="card-body d-flex flex-row-reverse">
-            <%= link_to delete_image_path(image.id), method: :delete, remote: true do %>
-              <%= image_tag 'trash.svg', class: 'img-interaction-button delete', id: image.id %>
-            <% end %>
-              <%= image_tag 'share-2.svg', class: 'img-interaction-button share', id: image.id %>
-          </div>
-          <%= image_tag url_for(image), class: "card-img-bottom" %>
-        </div>
-      <% end %>
+    <div class="card-body d-flex align-items-center flex-column" id="images-container">
+      <%= render partial: 'image', collection: @toy.images.order(created_at: :desc) %>
     </div>
   </div>
-
 </div>
