--- a/app/views/toys/_form.html.erb
+++ b/app/views/toys/_form.html.erb
@@ -21,7 +21,7 @@
       </div>
 
       <div class="container d-none" id="image-preview-container">
-        <div class="float-end btn" id="clear-upload-button"><%= image_tag 'x-circle' %> Clear</div>
+        <div class="float-end btn" id="clear-upload-button"><%= image_tag 'x-circle.svg' %> Clear</div>
         <div id="preview" class="d-flex justify-content-center flex-wrap" style>
         </div>
       </div>
