add backup source for missing images

--- a/app/views/toys/_form.html.erb
+++ b/app/views/toys/_form.html.erb
@@ -27,6 +27,6 @@
       </div>
     <% end %>
 
-    <%= f.submit class: "btn btn-primary", style: 'margin-top: 5px' %>
+    <%= f.submit class: "btn btn-secondary my-3" %>
   <% end %>
 </div>
