--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,5 +13,5 @@
   <%= f.label :password_confirmation, "Confirmation" %>
   <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-  <%= f.submit "Create my account", class: "btn btn-primary", style: 'margin-top: 5px' %>
+  <%= f.submit "Create my account", class: "btn btn-secondary my-3"%>
 <% end%>
