--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="container mt-5">
   <h3>Sign-up</h3>
   <%= render 'form', user: @user %>
+  <p >Already have an account? <%= link_to 'Log in', login_path, class:"link-secondary" %></p>
 </div>
