--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,8 +4,8 @@
       <%= image_tag gravatar_url(@user), class: "border", style:"border-radius: 50%;" %> 
     </div>
     <div class="col ">
-      <div class="fw-bold"><%= @user.name %></div>
-      <div class="text-muted small em fst-italic" > <sup><%= @user.email %></sup> </div>
+      <div class="fw-bold" id="username"><%= @user.name %></div>
+      <div class="text-muted small em fst-italic" id="email"> <sup><%= @user.email %></sup> </div>
     </div>
     <div class="col-2 d-flex align-items-end flex-column">
       <%= link_to edit_user_path(current_user), class: 'btn btn-sm' do %>
