--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,23 +7,28 @@
       <div class="fw-bold" id="username"><%= @user.name %></div>
       <div class="text-muted small em fst-italic" id="email"> <sup><%= @user.email %></sup> </div>
     </div>
-    <div class="col-2 d-flex align-items-end flex-column">
-      <%= link_to edit_user_path(current_user), class: 'btn btn-sm' do %>
-        <%= image_tag 'settings.svg', style: 'height: 16px; width: 16px;'%>
-      <% end %>
-      <%= link_to current_user, method: :delete, remote: true, class: 'btn  btn-sm' do %>
-        <%= image_tag 'trash.svg'%>
-      <% end %>
-    </div>
+    
+    <% if @user == current_user %>
+      <div class="col-2 d-flex align-items-end flex-column">
+        <%= link_to edit_user_path(current_user), class: 'btn btn-sm' do %>
+          <%= image_tag 'settings.svg', style: 'height: 16px; width: 16px;'%>
+        <% end %>
+        <%= link_to current_user, method: :delete, remote: true, class: 'btn  btn-sm' do %>
+          <%= image_tag 'trash.svg'%>
+        <% end %>
+      </div>
+    <% end %>
   </div>
 
   <div class="card mt-5">
     <div class="card-header text-center">
-      Your toys
+      <%= @user == current_user ? 'Your' : "#{@user.name}'s" %> toys
     </div>
     <div class="card-body d-flex justify-content-center" id="toy-summary">
       <% unless @user.toys.any? %>
-        <div class="small fst-italic text-center">You have no toys yet</div>
+        <div class="small fst-italic text-center">
+          <%= @user == current_user ? 'You have' : "#{@user.name} has" %> no toys yet
+        </div>
       <% end %>
 
       <% @user.toys.each do |toy| %>
